syntax = "proto3";

message ParseRequest {
    string file_path = 1;
}

message ParseResponse {
    bool success = 1;
    string error_msg = 2;
    repeated string imports = 3;
    repeated string external_modules = 4;
    bool has_main = 5;
}
